k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coolstore
  labels:
    name: coolstore
